--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,4 +5,9 @@ body {
 a {
   color: #00B7FF; }
 
+#container-home {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 5% auto; }
+
 /*# sourceMappingURL=style.css.map */
