--- a/views/sign-in.hbs
+++ b/views/sign-in.hbs
@@ -17,7 +17,7 @@
       <a class="nav-link" href="#">Find</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/sign-in">Sign In</a>
+      <a class="nav-link" href="#">Sign In</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Sing Up</a>
@@ -43,14 +43,17 @@
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
       <label class="form-check-label" for="exampleCheck1">Check me out</label>
     </div>
-    <button type="submit" class="btn btn-primary">Sign Up</button>
+    <button type="submit" class="btn btn-primary">Sign In</button>
   </form>
   </div>
 </div>
 
 <footer class="page-footer font-small" style="background-color: red;">
+
+  <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2019 Copyright:
     <a href="https://mdbootstrap.com/education/bootstrap/"> GAMMUNITY</a>
   </div>
-</footer>
+  <!-- Copyright -->
 
+</footer>
