--- a/views/sign-in.hbs
+++ b/views/sign-in.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light " style="background-color: red;">
-<a class="navbar-brand" href="#">
+<a class="navbar-brand" href="/">
     <img src="/images/logo-ironhack-blue.png" width="30" height="30" class="d-inline-block align-top" alt="">
     GAMMUNITY
   </a> 
@@ -17,7 +17,7 @@
       <a class="nav-link" href="#">Find</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Sign In</a>
+      <a class="nav-link" href="/sign-in">Sign In</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Sing Up</a>
@@ -25,12 +25,10 @@
   </ul>
 </nav>  
 <div id="container-home">
-  <div id="logo-home">
-    <img src="/images/9888042-3d-play-games-crossword-on-white-background.jpg" height="400" width="400">
-  </div>
   <div class="card" style="width: 18rem;">
     <form>
     <div class="form-group">
+      <a href="/auth/gmail" class="SocialLogIn">Login With Gmail</a>
       <label for="exampleInputEmail1">Email address</label>
       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
       <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
@@ -47,13 +45,8 @@
   </form>
   </div>
 </div>
-
 <footer class="page-footer font-small" style="background-color: red;">
-
-  <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2019 Copyright:
     <a href="https://mdbootstrap.com/education/bootstrap/"> GAMMUNITY</a>
   </div>
-  <!-- Copyright -->
-
 </footer>
