--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,4 +10,22 @@ a {
   justify-content: space-evenly;
   margin: 5% auto; }
 
+.btn-primary {
+  margin: 10px 100px; }
+
+.SocialLogIn {
+  display: block;
+  height: 30px;
+  border-style: solid;
+  border-width: 1px 1px 1px 1px;
+  text-decoration: none;
+  text-align: center;
+  color: white;
+  background-color: #4e6bcc;
+  padding: 4px;
+  margin-bottom: 10px; }
+
+#homeContainer {
+  margin: 5% auto; }
+
 /*# sourceMappingURL=style.css.map */
