--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -11,3 +11,21 @@ a {
   justify-content: space-evenly;
   margin: 5% auto;
 }
+.btn-primary{
+  margin: 10px 100px; 
+}
+.SocialLogIn{
+  display: block;
+  height: 30px;
+  border-style: solid;
+  border-width : 1px 1px 1px 1px;
+  text-decoration : none;
+  text-align: center;
+  color: white;
+  background-color: rgb(78, 107, 204);
+  padding : 4px;
+  margin-bottom: 10px; 
+}
+#homeContainer{
+  margin: 5% auto;
+}
