--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light " style="background-color: red;">
-<a class="navbar-brand" href="#">
+<a class="navbar-brand" href="/">
     <img src="/images/logo-ironhack-blue.png" width="30" height="30" class="d-inline-block align-top" alt="">
     GAMMUNITY
   </a> 
@@ -24,29 +24,8 @@
     </li>    
   </ul>
 </nav>  
-<div id="container-home">
-  <div id="logo-home">
-    <img src="/images/9888042-3d-play-games-crossword-on-white-background.jpg" height="400" width="400">
-  </div>
-  <div class="card" style="width: 18rem;">
-    <form>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-    </div>
-    <div class="form-group form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Sign Up</button>
-  </form>
-  </div>
-</div>
+
+{{>welcome }}
 
 <footer class="page-footer font-small" style="background-color: red;">
   <div class="footer-copyright text-center py-3">© 2019 Copyright:
