--- a/views/partials/players.hbs
+++ b/views/partials/players.hbs
@@ -8,6 +8,7 @@
       <th scope="col">Friends</th>
       <th scope="col">Clans</th>
       <th scope="col">Rating</th>
+      <th scope="col">Comments</th>
       <th scope="col">Events</th>
       <th scope="col">Hosts</th>
     </tr>
@@ -29,6 +30,7 @@
             <div class="w-100"></div>
           </div></td>
       <td>4.5</td>
+      <td>432</td>
       <td>34</td>
       <td>2</td>
     </tr>
@@ -48,6 +50,7 @@
             <div class="w-100"></div>
           </div></td>
       <td>4.5</td>
+      <td>432</td>
       <td>34</td>
       <td>2</td>
     </tr>
@@ -67,6 +70,7 @@
             <div class="w-100"></div>
           </div></td>
       <td>4.5</td>
+      <td>432</td>
       <td>34</td>
       <td>2</td>
     </tr>
