--- a/views/partials/clans.hbs
+++ b/views/partials/clans.hbs
@@ -7,6 +7,7 @@
       <th scope="col">Level</th>
       <th scope="col">Members</th>
       <th scope="col">Rating</th>
+      <th scope="col">Comments</th>
       <th scope="col">Events</th>
       <th scope="col">Hosts</th>
     </tr>
@@ -18,6 +19,7 @@
       <td>99</td>
       <td>125</td>
       <td>4.5</td>
+      <td>125</td>
       <td>34</td>
       <td>2</td>
     </tr>
@@ -27,6 +29,7 @@
       <td>99</td>
       <td>125</td>
       <td>4.5</td>
+      <td>125</td>
       <td>34</td>
       <td>2</td>
     </tr>
@@ -36,6 +39,7 @@
       <td>99</td>
       <td>125</td>
       <td>4.5</td>
+      <td>125</td>
       <td>34</td>
       <td>2</td>
     </tr>
