--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,30 +1,24 @@
-<nav class="navbar navbar-light " style="background-color: red;">
-<a class="navbar-brand" href="/">
-    <img src="/images/logo-ironhack-blue.png" width="30" height="30" class="d-inline-block align-top" alt="">
-    GAMMUNITY
-  </a> 
-  <ul class="nav justify-content-end">
-    <li class="nav-item">
-      <a class="nav-link active" href="#">Events</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Rankings</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">News</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Find</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/profile">USERNAME</a>
-    </li>  
-    <li class="nav-item">
-      <img src="/images/logo-ironhack-blue.png" width="30" height="30" class="d-inline-block align-top" alt="">
-
-    </li>    
-  </ul>
-</nav>  
+<div class="container" id="homeContainer">
+  <div class="card-deck">
+    <div class="card">
+      {{>mainEvent}}     
+    </div>    
+    <div class="card">
+      <img src="/images/9888042-3d-play-games-crossword-on-white-background.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Main event 2</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      </div>      
+    </div>
+    <div class="card">
+      <img src="/images/9888042-3d-play-games-crossword-on-white-background.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Main event 3</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      </div>     
+    </div>
+  </div>
+</div>  
 
 <div class="container" id="homeContainer">
       <div class="row">
@@ -69,11 +63,7 @@
           </div>
         </div>
       </div>
-    </div>
+</div>  
 
-<footer class="page-footer font-small" style="background-color: red;">
-  <div class="footer-copyright text-center py-3">© 2019 Copyright:
-    <a href="https://mdbootstrap.com/education/bootstrap/"> GAMMUNITY</a>
-  </div>
-</footer>
+
 
