--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,13 +5,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   
   <title>GAMMUNITY</title>
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 <body>
+<nav class="navbar navbar-light " style="background-color: red;">
+<a class="navbar-brand" href="/">
+    <img src="/images/logo-ironhack-blue.png" width="30" height="30" class="d-inline-block align-top" alt="">
+    GAMMUNITY
+  </a> 
+  <ul class="nav justify-content-end">
+    <li class="nav-item">
+      <a class="nav-link active" href="#">Events</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Rankings</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/articles">News</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Find</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/sign-in">Sign In</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Sing Up</a>
+    </li>    
+  </ul>
+</nav>    
 
   {{{body}}}
+
+<footer class="page-footer font-small" style="background-color: red;">
+  <div class="footer-copyright text-center py-3">© 2019 Copyright:
+    <a href="https://mdbootstrap.com/education/bootstrap/"> GAMMUNITY</a>
+  </div>
+</footer>  
 
   <script src="/javascripts/script.js"></script>
 </body>
