--- a/views/article.hbs
+++ b/views/article.hbs
@@ -6,7 +6,7 @@
     <div class="col-md-4" id="principal">
       <div class="row">            
         <div class="col-md-12">
-          <img src="{{article.photo}}" alt="Review: Game of Thrones - 'The Long Night'" class="thumb" width="350" height ="150"> 
+          <img src="{{article.photo}}" alt="Review: Game of Thrones - 'The Long Night'" class="thumb" width="350" height => 
         </div>        
       </div>
     </div>
