--- a/views/partials/mainEvent.hbs
+++ b/views/partials/mainEvent.hbs
@@ -1,5 +1,10 @@
-<img src="/images/9888042-3d-play-games-crossword-on-white-background.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Main event 1</h5>
-    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-</div> 
+<a href="/home/{{this._id}}" class="thumb" sl-processed="1">
+  <div class="card">
+    <img src="{{this.photo}}" class="card-img-top" alt="..." height="208">
+    <div class="card-body">
+      <h5 class="card-title-article">{{this.title}}</h5>
+    </div> 
+  </div> 
+</a>
+
+
