routes linked to each view

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,4 +67,8 @@ a {
 .card-title-article {
   text-align: center; }
 
+#joinbtn {
+  margin: 0 auto;
+  width: 100px; }
+
 /*# sourceMappingURL=style.css.map */
