--- a/views/event-detail.hbs
+++ b/views/event-detail.hbs
@@ -1,53 +1,18 @@
-<div class="container marg borde">
-  <div class="row">
-    <div class="col-8 borde marg">
-      <h2>Event Title</h2>
-      <div class="container">
-        <div class="row marg">
-          <div class="col">
-            <h3>Event Rate</h3>
-          </div>
-          <div class="col">
-            <figure> X X X X X</figure>
-          </div>
-        </div>
-        <div class="event-detail">
-          <p>Text area</p>
-        </div>
-          <div class="row marg">
-            <label class="col">Register friends/clan</label>
-            <div class="btn-group" role="group">
-              <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Friends
-              </button>
-              <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                <a class="dropdown-item" href="#">Dropdown link</a>
-                <a class="dropdown-item" href="#">Dropdown link</a>
-              </div>
-            <div class="w-100"></div>
-          </div>
-          </div>
-          <div>
-            <div class="container">
-              <div class="row marg">
-                <div class="col">
-                  Level required
-                </div>
-                <div class="col">
-                  10 / 5 frieds / clan
-                </div>
-              </div>
-              <div class="row">
-                <input class="col btn btn-primary btn-lg submit" type="submit" value="Submit">
-              </div>
-            </div>
-          </div>
+<div class="container " id="homeContainer">  
+  <div class="card-deck">
+    <div class="card">
+      <img src="{{event.photo}}" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h3 class="card-title">{{event.title}}</h3>
+        <h5>Event Rate: {{event.rate}}</h5>
+        <p class="card-text">OUR OLD SCHOOL GAME NIGHT IS HERE!! we invite you to jin us to our monthly night to play old 64bits games and dinner with us. We will meet at Arthur's house next saturday at 20 oclock. Don't forget to bring your drinks!  </p>
+        <button type="submit" class="btn btn-primary" id='joinbtn'>Join in!</button>       
       </div>
-          
     </div>
-    <div class="col-4">
-      map
-      <div class="col-11 box-map"></div>
-    </div>
-  </div>
-</div>
+    <div class="card">      
+      <div class="card-body">
+        <h5 class="card-title">MAP</h5>        
+      </div>
+    </div> 
+  </div> 
+</div>  
