--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,5 @@
 <div class="container" id="homeContainer">
+  <h2>Main Events:</h2>
   <div class="card-deck">    
       {{#each mainEvent}}     
         {{>mainEvent this}} 
@@ -10,11 +11,12 @@
       <div class="row">
         <div class="col-md-12" id="head"></div>
       </div>
+        <h3>Other Events:</h3>
       <div class="row">
         <div class="col-md-8" id="principal">
           <div class="row"> 
             {{#each leftEvent}}  
-              {{> secondaryEventPartial this}}  
+              {{> secondaryEventPartial this}} 
             {{/each}}  
           </div>
         </div>
