--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body>
 <nav class="navbar navbar-light " style="background-color: red;">
 <a class="navbar-brand" href="/">
     <img src="/images/logo-ironhack-blue.png" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -21,7 +20,7 @@
   </a> 
   <ul class="nav justify-content-end">
     <li class="nav-item">
-      <a class="nav-link active" href="/home">Events</a>
+      <a class="nav-link active" href="/events">Events</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/ranking">Rankings</a>
@@ -36,18 +35,14 @@
       <a class="nav-link" href="/sign-in">Sign In</a>
     </li>      
   </ul>
-</nav>    
+</nav>  
 
-  {{{body}}}
+{{{body}}}
 
-
-
-  <script src="/javascripts/script.js"></script>
-  <footer class="page-footer font-small" style="background-color: red;">
+<script src="/javascripts/script.js"></script>
+<footer class="page-footer font-small" style="background-color: red;">
   <div class="footer-copyright text-center py-3">© 2019 Copyright:
     <a href="https://mdbootstrap.com/education/bootstrap/"> GAMMUNITY</a>
   </div>
 </footer>
-
-</body>
 </html>
