--- a/views/partials/mainEvent.hbs
+++ b/views/partials/mainEvent.hbs
@@ -1,10 +1,10 @@
-<a href="/home/{{this._id}}" class="thumb" sl-processed="1">
-  <div class="card">
+<div class="card">
+  <a href="/events/{{this._id}}" >
     <img src="{{this.photo}}" class="card-img-top" alt="..." height="208">
     <div class="card-body">
-      <h5 class="card-title-article">{{this.title}}</h5>
+        <h5 class="card-title-article">{{this.title}}</h5>
     </div> 
-  </div> 
-</a>
+  </a>
+</div> 
 
 
