--- a/views/profile-edit.hbs
+++ b/views/profile-edit.hbs
@@ -1,7 +1,7 @@
  
 <div id="container-home">
   <div class="card" style="width: 500;">
-    <form action="/home/profile" method="post" enctype="multipart/form-data">
+    <form action="/profile/:id" method="post" enctype="multipart/form-data">
     <div class="form-group">      
       <label for="exampleInputEmail1">Email address</label>
       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
