updated news and event forms

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -26,11 +26,10 @@
               <aside>
                 <h2>Aside</h2>
                 <br>
-                <h4>Titulo</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi optio dignissimos nisi assumenda voluptas similique, esse, vel, fugiat rerum, natus neque perspiciatis accusamus error! Eaque, nobis, et! Reprehenderit, cumque, distinctio.</p>
-                <br>
-                <h4>Titulo</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi optio dignissimos nisi assumenda voluptas similique, esse, vel, fugiat rerum, natus neque perspiciatis accusamus error! Eaque, nobis, et! Reprehenderit, cumque, distinctio.</p>
+                <h4>New EVENT</h4>
+                <a href="events/new" class="SocialLogIn">Create a new Event</a>
+                           <h4>New Article</h4>           
+                <a href="/article/new" class="SocialLogIn">WRITE A NEW!!</a>  
               </aside>
             </div>
           </div>
