--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -86,7 +86,10 @@
             <a href="/profile/friends"> FRIENDS</a> 
             <br>
             <br>  
-            <a href="/profile/clans"> CLANS</a>         
+            <a href="/profile/clans"> CLANS</a>    
+            <br>
+            <br>  
+            <a href="/article/new">WRITE A NEW!!</a>       
           <aside>
         </div>        
       </div>
