--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,7 +25,7 @@
   <ul class="nav justify-content-end">
     <li class="nav-item">
       {{#if user}}
-      <a class="nav-link active" href="/events">Events</a>
+      <a class="nav-link active" href="/home">Home</a>
       {{/if}}
     </li>
     <li class="nav-item">
