--- a/views/createEvent.hbs
+++ b/views/createEvent.hbs
@@ -1,30 +1,35 @@
- 
-<div id="container-home-event">
-  <div class="card" style="width: 700">
-    <form action="/events" method="post" enctype="multipart/form-data">
-    <div class="form-group">      
-      <label for="title">Title</label>
-      <input type="text" class="form-control" id="titleEvent" aria-describedby="emailHelp" placeholder="Enter Title">      
+<form action="/events/new" method="POST" >
+  <div id="container-home-event">
+    <div class="card" style="width: 700">
+         <label for="title">New event Title:</label>
+      <input type="text" class="form-control" name ="title" id="titleEvent" aria-describedby="emailHelp" placeholder="Enter Title">      
     </div>
     <div class="form-group">
       <label for="category">Category</label>
-      <input type="text" class="form-control" id="categoryEvent" placeholder="nintendo/PS4/...">
+      <input type="text" class="form-control" name="category" id="categoryEvent" placeholder="nintendo/PS4/...">
     </div>
     <label>Event Photo</label>
     <br>
     <input type="file" name="photo">
     <div class="form-group">      
       <label for="clan">Clan Name</label>
-      <input type="text" class="form-control" id="clanName">      
+      <input type="text" class="form-control" id="clanName" name="clan">      
     </div>  
     <div class="form-group">         
-      <textarea name="comment" form="usrform" placeholder="write about the event..." style="width:100%;"></textarea>      
+      <textarea name="text" placeholder="write about the event..." style="width:100%;"></textarea>      
     </div>    
     <div class="form-group">
       <label for="date">Event Date</label>
-      <input type="date" class="form-control" id="eventStart">
+      <input type="date" class="form-control" id="eventStart" name="date">
     </div>    
     <button type="submit" class="btn btn-primary" id="eventSumit">Submit</button>
-  </form>
+    </div>
   </div>
-</div>
+</form> 
+
+
+
+
+
+
+
