--- a/views/home.hbs
+++ b/views/home.hbs
@@ -20,24 +20,27 @@
               {{> secondaryEventPartial this}} 
             {{/each}}  
           </div>
-        </div>  
-        <div class="col-md-4" id="lateral"></div>
+        </div>
+        <div class="col-md-4" id="lateral">
           <div class="row">
             <div class="col-md-12" id="anuncios">
               <aside>
                 <h2>Aside</h2>
                 <br>
                 <h4>New EVENT</h4>
-                <a href="events/new" class="SocialLogIn">Create a new Event</a>
-                           <h4>New Article</h4>           
+                <a href="/events/new" class="SocialLogIn">CREATE EVENT</a>
+                <h4>New Article</h4>           
                 <a href="/article/new" class="SocialLogIn">WRITE A NEW!!</a>  
               </aside>
             </div>
           </div>
-         </div>   
         </div>
       </div>
-</div>    
+</div>  
+    
 {{/if}}
+
+
+
 
 
