--- a/views/createNew.hbs
+++ b/views/createNew.hbs
@@ -1,4 +1,4 @@
-<form action="/article/new" method="POST" >
+<form action="/article/new" method="POST" enctype="multipart/form-data" >
   <div id="container-home-event">
     <div class="card" style="width: 700">
       <div class="form-group">      
