--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -27,7 +27,7 @@
                             <span aria-hidden="true">&times;</span>
                           </button>
                         </div>  
-                        <form enctype="multipart/form-data" action="/profile/{{user._id}}/{{user.photoName}}" method="POST">
+                        <form enctype="multipart/form-data" action="/profile/{{user._id}}/photo" method="POST">
                         <div class="modal-body">                        
                           <input type="file" name="photo">
                           <input type="submit" value="SAVE">
