--- a/views/article.hbs
+++ b/views/article.hbs
@@ -7,6 +7,13 @@
       <div class="row">            
         <div class="col-md-12">
           <img src="{{article.photo}}" alt="Review: Game of Thrones - 'The Long Night'" class="thumb" width="350" height => 
+          <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Edit Article</button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="{{article._id}}/edit">Edit article</a>
+                <a class="dropdown-item" href="{{article._id}}/delet">Delete</a>              
+              </div>
+          </div>         
         </div>        
       </div>
     </div>
