--- a/views/event-detail.hbs
+++ b/views/event-detail.hbs
@@ -6,6 +6,7 @@
         <h3 class="card-title">{{event.title}}</h3>
         <h5>Event Rate: {{event.rate}}</h5>
         <h5>Event Date: {{event.date}}</h5>
+        <h5>Event Creator: {{event.creator.0.username}}</h5>        
         <p class="card-text">OUR OLD SCHOOL GAME NIGHT IS HERE!! we invite you to jin us to our monthly night to play old 64bits games and dinner with us. We will meet at Arthur's house next saturday at 20 oclock. Don't forget to bring your drinks!  </p>
         <button type="submit" class="btn btn-primary" id='joinbtn'>Join in!</button> 
         <div class="dropdown">
