--- a/views/createEvent.hbs
+++ b/views/createEvent.hbs
@@ -31,6 +31,9 @@
       <input type="text" class="form-control" id="longitude">      
     </div>  
     <button type="submit" class="btn btn-primary" id="eventSumit">Submit</button>
+    {{#if message}}
+      <div class="error-msg">{{message }}</div>
+      {{/if}}
     </div>
   </div>
 </form> 
