--- a/views/createEvent.hbs
+++ b/views/createEvent.hbs
@@ -24,11 +24,11 @@
     </div>   
     <div class="form-group">      
       <label for="clan">latitude event</label>
-      <input type="text" class="form-control" id="latitude">      
+      <input type="text" class="form-control" name="latitude" id="latitude">      
     </div>
     <div class="form-group">      
       <label for="clan">longitude event</label>
-      <input type="text" class="form-control" id="longitude">      
+      <input type="text" class="form-control" name="longitude" id="longitude">      
     </div>  
     <button type="submit" class="btn btn-primary" id="eventSumit">Submit</button>
     </div>
