--- a/views/editEvent.hbs
+++ b/views/editEvent.hbs
@@ -21,7 +21,7 @@
       <input type="text" class="form-control" id="clanName" name="clan">      
     </div>  
     <div class="form-group">         
-      <textarea name="text" placeholder="write about the event..." style="width:100%;">{{event.text}}</textarea>      
+      <textarea name="text" placeholder="write about the event..." style="width:100%;"></textarea>      
     </div>    
     <div class="form-group">
       <label for="date">Date:{{event.date}}</label>
