--- a/views/event-detail.hbs
+++ b/views/event-detail.hbs
@@ -5,10 +5,18 @@
       <div class="card-body">
         <h3 class="card-title">{{event.title}}</h3>
         <h5>Event Rate: {{event.rate}}</h5>
+        <h5>Users: {{event.users.length}}</h5>
         <h5>Event Date: {{event.date}}</h5>
         <h5>Event Creator: {{event.creator.0.username}}</h5>        
         <p class="card-text">OUR OLD SCHOOL GAME NIGHT IS HERE!! we invite you to jin us to our monthly night to play old 64bits games and dinner with us. We will meet at Arthur's house next saturday at 20 oclock. Don't forget to bring your drinks!  </p>
+        <form action="/events/{{event.id}}/confirmation" method="POST">
         <button type="submit" class="btn btn-primary" id='joinbtn'>Join in!</button> 
+        <div>
+           {{#if message }}
+            <div class="error-msg">{{message }} </div>
+           {{/if}}
+        </div>
+        </form>
         <div class="dropdown">
               <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Edit Event</button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
