--- a/views/not-found.hbs
+++ b/views/not-found.hbs
@@ -1,2 +1,8 @@
-<h1>404 Error</h1>
-<h2>This route does not exist on the app! Check if everything is ok!</h2>
+<div id="container-home">
+  <div id="logo-home">
+    <a  id="errorImage" href="/sign-in">
+      <h2>Sorry!! try to login again!</h2>
+      <img src="/images/errorpic.png" height="400" width="400">    
+    </a>
+  </div>  
+</div>
