--- a/views/partials/userPartial.hbs
+++ b/views/partials/userPartial.hbs
@@ -1,4 +1,4 @@
-<div class="col-sm-4" id="articleContainer"> 
+<div class="col-sm-4" id="usersContainer"> 
   <a href="/profile/{{this._id}}"  sl-processed="1">
   <figure class="box-list">
     <img src="{{this.photo}}" width='350' height="350">
