--- a/views/users.hbs
+++ b/views/users.hbs
@@ -1,5 +1,7 @@
-<div>
+<div class="container" id="usersContainer">   
+  <div class="row">
   {{#each event.users}}
    {{> userPartial this}}
    {{/each}}
+  </div>
 </div>
