--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -2,6 +2,9 @@
 //   padding: 50px;
 //   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 // }
+.nav-bcg {
+  background-color: #9c1616;
+}
 
 a {
   color: #00B7FF;
@@ -117,4 +120,26 @@ a {
 
  #secondaryEvent > a{
    color: black;
+ }
+
+ #usersContainer {
+   margin: 5% auto;
+ }
+
+
+ .float-img {
+  float: left;
+ }
+
+ #btnGroupDropgame{ 
+  background-color: #9c1616;
+  border: 0;
+ }
+
+ .align{
+   align-items: center;
+ }
+
+ .font-red{
+  color: white
  }
