--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -103,4 +103,8 @@ a {
 #errorImage > h2 {
   text-align: center; }
 
+#btnGroupDropGame {
+  background-color: red;
+  border: 0; }
+
 /*# sourceMappingURL=style.css.map */
